fix: Fix z-index

--- a/client/UI/NavSideArrows/NavSideArrows.module.css
+++ b/client/UI/NavSideArrows/NavSideArrows.module.css
@@ -1,7 +1,7 @@
 .arrow {
   position: absolute;
   top: 50%;
-  z-index: 50;
+  z-index: 10;
 
   width: 50px;
   height: 50px;
